--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "7.12.2",
     "@mantine/hooks": "7.12.2",
+    "@mantine/notifications": "^7.12.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
